# GDExtension_WindowsUtils

./: .gitignore  CMakeLists.txt  RunEditor.bat
cmake/: BuildConfig.cmake  Compilers.cmake  GlobalDefines.cmake
demo/: icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
include/: WindowUtils.h  WindowsUtils.h  plugin.h
src/: KeyboardKeysRegistration.cpp  MouseInputPassThrough.cpp  WindowUtils.cpp  WindowsUtils.cpp  plugin.cpp
